MD History: Add title to item menu button

This matches the behavior of the existing history page.

BUG=623014
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2106363002
Cr-Commit-Position: refs/heads/master@{#403387}

Former-commit-id: 710f4b3005d697706b7c6e8b7b71e8de83f64a80